# dbs-eeg-sync

./: .gitignore  CITATION.cff  CONTRIBUTING.md  INSTALL_CLINICIANS.md  LICENSE  README.md  hello.py  pyproject.toml  test_results.txt
.github/workflows/: ci.yml
benchmark/: README.md
config/: default.json  default.yml
data/: dbs_example.json
dbs_eeg_sync/: __init__.py  __main__.py  _version.py  cli.py  core.py  data_loader.py  gui.py  gui_launcher.py  plotting.py  power_calculater.py  power_calculator.py  sync_artefact_finder.py  sync_artifact_finder.py  synchronizer.py
examples/: run_example.py
launchers/: Launch dbs-eeg-sync (Windows).bat  Launch dbs-eeg-sync (macOS).command
notebooks/: README.md  check_dbs_data.ipynb  check_eeg_data.ipynb  double_sync.ipynb  eeg_sync_index.ipynb  epi_sync_test.ipynb  publication_figures.ipynb  sync_artifact_detection.ipynb  sync_duration_analysis.ipynb  sync_log.txt  synchronizer.ipynb  test_sync_methods.ipynb  test_synchronizer.ipynb  validation_metrics.ipynb
outputs/: sync_info.csv
outputs/outputData/: 20250428_135656_synchronized_dbs.csv
scripts/: evaluate_benchmark.py  generate_benchmark_dataset.py  generate_synthetic_example_data.py
source/: data_loader.py  main.py  percept_session_summary.py  power_calculater.py  power_calculator.py  slider.py  sync_artefact_finder.py  sync_peaks_finder.py  synchronizer.py
tests/: manual_test_core_utils.py  test_cli.py  test_core.py  test_data_loader.py  test_gui.py  test_gui_quick.py  test_power_calculater.py  test_power_calculator.py  test_sync_artefact_finder.py  test_sync_artifact_finder.py  test_sync_peak_finder.py  test_synchronizer.py
