[project]
name = "dbs-eeg-sync"
version = "0.1.0"
description = "Synchronize DBS and EEG recordings with optional GUI-assisted alignment and plots."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Lena Salzmann", email = "lena.salzmann@med.uni-muenchen.de" }
]
keywords = [
    "DBS",
    "EEG",
    "synchronization",
    "neuroscience",
    "deep brain stimulation",
    "electroencephalography",
    "artifact detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.8",
    "mne>=1.9.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyxdf>=1.16.5",
    "plotly>=5.22.0",
    "pyyaml>=6.0.1"
]

[project.urls]
Homepage = "https://github.com/neurokidslab/dbs-eeg-sync"
Repository = "https://github.com/neurokidslab/dbs-eeg-sync"
Issues = "https://github.com/neurokidslab/dbs-eeg-sync/issues"

[project.optional-dependencies]
gui = [
    "PyQt6>=6.7; platform_system != 'Linux'",
    "PyQt6-Qt6>=6.7; platform_system != 'Linux'",
    "PyQt6-sip>=13.6; platform_system != 'Linux'",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "nbclient>=0.10.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
dbs-eeg-sync = "dbs_eeg_sync.cli:main"
dbs_eeg_sync = "dbs_eeg_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbs_eeg_sync"]

[tool.hatch.build]
include = [
    "dbs_eeg_sync/**",
    "README.md",
    "LICENSE",
    "CITATION.cff",
    "config/*.json",
    "config/*.yml",
    "data/*.json",
    "data/*.set",
]
exclude = [
    "notebooks/**",
    "outputs/**",
    "outputs_test/**",
    "*/__pycache__/**",
    "**/*.pyc",
    "**/__pycache__/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    "tests/**",
]